--- a/src/styles/PianoKeyboard.css
+++ b/src/styles/PianoKeyboard.css
@@ -1,5 +1,3 @@
-
-
 .keyboard {
     background-color: #61dafb;
 
@@ -9,25 +7,57 @@
     transform: translateX(-50%);
 
     height: 50%;
-    width: 90%;
+    width: 90vw;
     display: flex;
 }
 
-.whiteKey {
-    position: relative;
+/* 25 keys */
+.key:first-child:nth-last-child(25),
+.key:first-child:nth-last-child(25) ~ .whiteKey {
     border: solid black 1px;
     z-index: 1;
-    /*width: 100.8px;*/
-    width: 6.67%;
-    /*margin: 0 auto 0 auto;*/
-    border-collapse: collapse;
+    margin: 0 auto 0 auto;
+    width: 6vw;
 }
 
-.blackKey {
-    position: relative;
-    z-index: 2;
+/* 25 keys */
+.key:first-child:nth-last-child(25) ~ .blackKey {
     max-height: 60%;
+    z-index: 2;
+    width: 3vw;
+    margin: 0 -1.5vw 0 -1.5vw;
+}
 
-    /*margin: 0 -25.2px 0 -25.2px;*/
-    border-collapse: collapse;
+/* 49 keys */
+.key:first-child:nth-last-child(49),
+.key:first-child:nth-last-child(49) ~ .whiteKey {
+    border: solid black 1px;
+    z-index: 1;
+    margin: 0 auto 0 auto;
+    width: 3.21vw;
+}
+
+/* 49 keys */
+.key:first-child:nth-last-child(49) ~ .blackKey {
+    max-height: 60%;
+    z-index: 2;
+    width: 1.61vw;
+    margin: 0 -.8vw 0 -.8vw;
+}
+
+/* 61 keys */
+.key:first-child:nth-last-child(61),
+.key:first-child:nth-last-child(61) ~ .whiteKey {
+    border: solid black 1px;
+    z-index: 1;
+    margin: 0 auto 0 auto;
+    width: 2.57vw;
+}
+
+/* 61 keys */
+.key:first-child:nth-last-child(61) ~ .blackKey {
+    max-height: 60%;
+    z-index: 2;
+    width: 1.286vw;
+    margin: 0 -.64vw 0 -.64vw;
 }
