--- a/src/styles/PianoKey.css
+++ b/src/styles/PianoKey.css
@@ -5,7 +5,9 @@
 .whiteKey {
     background-color: ghostwhite;
     height: 100%;
-    border: solid black 1px;
+    outline: 1px solid black;
+    outline-offset: -1px;
+    border-collapse: collapse;
     z-index: 1;
 }
 
@@ -65,4 +67,19 @@
 .key:first-child:nth-last-child(61) ~ .blackKey {
     width: 1.286vw;
     margin: 0 -.64vw 0 -.64vw;
+}
+
+.granim-C3 {
+    width: auto;
+    height: 100%;
+}
+
+.granim-Db3 {
+    width: 100%;
+    height: 100%;
+}
+
+.granim-D3 {
+    width: auto;
+    height: 100%;
 }
